<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.epita.android.app.MainActivity">

    <TextView
        android:id="@+id/helloWorldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_helloWorldText"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="6dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/clickMeButton"
        />

    <Button
        android:id="@+id/clickMeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_ClickMeButton"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/helloWorldText"
        />

    <Button
        android:id="@+id/resetButton"
        android:text="@string/main_ResetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/helloWorldText"
        app:layout_constraintLeft_toRightOf="@id/clickMeButton"
        app:layout_constraintRight_toRightOf="@id/reverseButton"
        />

    <Button
        android:id="@+id/reverseButton"
        android:text="@string/main_ReverseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@id/resetButton"
        app:layout_constraintTop_toBottomOf="@+id/helloWorldText"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/mainCounter"
        android:text="@string/main_Counter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:layout_constraintTop_toBottomOf="@id/reverseButton"
        android:textDirection="rtl"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"

        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="30dp"
        android:layout_marginRight="3dp"
        />

    <LinearLayout
        android:id="@+id/normalButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainCounter"
        android:layoutDirection="rtl"
        >
        <Button

            android:id="@+id/normalButton"
            android:text="@string/main_NormalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="30dp"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/incrementSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_IncrementSizeText"
        android:textSize="18sp"
        android:paddingLeft="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normalButtonLayout" />


    <LinearLayout
        android:id="@+id/bigButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/normalButtonLayout">

        <Button
            android:id="@+id/bigButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_BigButton"


            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
